--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Website</title>
+    <link rel="stylesheet" href="styles/index.css">
+    <style>
+        h1 {color:yellow}
+    </style>
 </head>
 <body>
     <header>
+        <main>
         <h1>My webpage</h1>
         <nav>
             <ul>
@@ -22,7 +27,7 @@
     </header>
     <main>
         <section>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis ullam sint quasi minima deleniti laborum laboriosam vero pariatur error! Veritatis, doloribus incidunt. Fugiat molestias debitis necessitatibus repellendus facere minima ullam.</p>
+            <p style="color:green">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis ullam sint quasi minima deleniti laborum laboriosam vero pariatur error! Veritatis, doloribus incidunt. Fugiat molestias debitis necessitatibus repellendus facere minima ullam.</p>
 
         </section>
         <section id="second-paragraph">
@@ -30,7 +35,7 @@
         </section>
         <section>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto magni error incidunt inventore veniam corporis. Maiores optio vitae non velit quasi excepturi quibusdam ab inventore nihil numquam, unde culpa dolorem.</p>
-            <img src="images/cat.jpg" alt="cat" title="Sleeping Cat">
+            <img src="images/cat.jpg" alt="cat" title="Sleeping Cat" width="300px" height="auto">
         </section>
     </main>
     <footer>
